[package]
name = "tapthe-ai-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP/WebSocket API server for the Tapthe.ai Agent OS daemon"

[dependencies]
tapthe-ai-types = { path = "../tapthe-ai-types" }
tapthe-ai-kernel = { path = "../tapthe-ai-kernel" }
tapthe-ai-runtime = { path = "../tapthe-ai-runtime" }
tapthe-ai-memory = { path = "../tapthe-ai-memory" }
tapthe-ai-channels = { path = "../tapthe-ai-channels" }
tapthe-ai-wire = { path = "../tapthe-ai-wire" }
tapthe-ai-skills = { path = "../tapthe-ai-skills" }
tapthe-ai-hands = { path = "../tapthe-ai-hands" }
tapthe-ai-extensions = { path = "../tapthe-ai-extensions" }
tapthe-ai-migrate = { path = "../tapthe-ai-migrate" }
dashmap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
tokio-stream = { workspace = true }
subtle = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
socket2 = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
