[package]
name = "tapthe-ai-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for the Tapthe.ai Agent OS"

[[bin]]
name = "tapthe-ai"
path = "src/main.rs"

[dependencies]
tapthe-ai-types = { path = "../tapthe-ai-types" }
tapthe-ai-kernel = { path = "../tapthe-ai-kernel" }
tapthe-ai-api = { path = "../tapthe-ai-api" }
tapthe-ai-migrate = { path = "../tapthe-ai-migrate" }
tapthe-ai-skills = { path = "../tapthe-ai-skills" }
tapthe-ai-extensions = { path = "../tapthe-ai-extensions" }
zeroize = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
tapthe-ai-runtime = { path = "../tapthe-ai-runtime" }
uuid = { workspace = true }
ratatui = { workspace = true }
colored = { workspace = true }
tempfile = { workspace = true }
