[package]
name = "tapthe-ai-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core kernel for the Tapthe.ai Agent OS"

[dependencies]
tapthe-ai-types = { path = "../tapthe-ai-types" }
tapthe-ai-memory = { path = "../tapthe-ai-memory" }
tapthe-ai-runtime = { path = "../tapthe-ai-runtime" }
tapthe-ai-skills = { path = "../tapthe-ai-skills" }
tapthe-ai-hands = { path = "../tapthe-ai-hands" }
tapthe-ai-extensions = { path = "../tapthe-ai-extensions" }
tapthe-ai-wire = { path = "../tapthe-ai-wire" }
tapthe-ai-channels = { path = "../tapthe-ai-channels" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
cron = "0.15"
zeroize = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
