[package]
name = "tapthe-ai-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Memory substrate for the Tapthe.ai Agent OS"

[features]
default = ["http-memory"]
http-memory = ["reqwest"]

[dependencies]
tapthe-ai-types = { path = "../tapthe-ai-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["blocking"], optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
