[package]
name = "tapthe-ai-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Migration engine for importing from other agent frameworks into Tapthe.ai"

[dependencies]
tapthe-ai-types = { path = "../tapthe-ai-types" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
json5 = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
